--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ proc-macro = true
 [dependencies]
 itertools = "~0.5"
 quote = "^1.0"
-syn = { version = "1.0.23", features = ["aster", "full", "visit"] }
+syn = { version = "1.0.23", features = ["full", "visit"] }
 compiletest_rs = { version = "^0.2", optional = true }
 
 [features]
